Actualización de métodos deprecados